load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@io_bazel_rules_webtesting//web:go.bzl", "go_web_test_suite")

# gazelle:exclude geth_deps.go
# gazelle:exclude web_test.go

test_suite(
    name = "ci",
    tags = [
        "e2e",
        "manual",
        "minimal",
    ],
    tests = [
        ":go_default_test",
        ":ui_test_chrome-external",  # Requires EXTERNAL_WEBDRIVER_SERVER_ADDRESS to be set.
    ],
)

test_suite(
    name = "local",
    tags = [
        "e2e",
        "manual",
        "minimal",
    ],
    tests = [
        ":go_default_test",
        ":ui_test_chromium-local",
    ],
)

go_test(
    name = "go_default_test",
    size = "large",
    srcs = [
        "endtoend_test.go",
        "minimal_e2e_test.go",
        "minimal_slashing_e2e_test.go",
    ],
    args = ["-test.v"],
    data = [
        "//cmd/beacon-chain",
        "//cmd/slasher",
        "//cmd/validator",
        "//tools/bootnode",
        "@com_github_ethereum_go_ethereum//cmd/geth",
    ],
    shard_count = 2,
    tags = [
        "block-network",
        "e2e",
        "exclusive",
        "minimal",
    ],
    deps = [
        "//beacon-chain/core/state:go_default_library",
        "//endtoend/components:go_default_library",
        "//endtoend/evaluators:go_default_library",
        "//endtoend/helpers:go_default_library",
        "//endtoend/params:go_default_library",
        "//endtoend/types:go_default_library",
        "//proto/eth/v1alpha1:go_default_library",
        "//shared/params:go_default_library",
        "//shared/testutil:go_default_library",
        "//shared/testutil/assert:go_default_library",
        "//shared/testutil/require:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_web_test_suite(
    name = "ui_test",
    srcs = ["web_test.go"],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        "@io_bazel_rules_webtesting//browsers:chrome-external",
    ],
    data = [
        "//cmd/validator",
    ],
    local = True,
    tags = [
        "e2e",
        "exclusive",
        "external",
        "manual",
        "minimal",
        "native",
        "requires-network",
    ],
    deps = [
        "//endtoend/components:go_default_library",
        "//endtoend/helpers:go_default_library",
        "//endtoend/params:go_default_library",
        "//endtoend/types:go_default_library",
        "//shared/testutil/require:go_default_library",
        "@com_github_tebeka_selenium//:go_default_library",
        "@io_bazel_rules_webtesting//go/webtest:go_default_library",
    ],
)
