load("@prysm//tools/go:def.bzl", "go_test")

# gazelle:exclude geth_deps.go

go_test(
    name = "go_default_test",
    size = "large",
    testonly = True,
    srcs = [
        "endtoend_test.go",
        "minimal_e2e_test.go",
        "slasher_e2e_test.go",
        "slasher_simulator_e2e_test.go",
        "slasher_sync_e2e_test.go",
    ],
    args = ["-test.v"],
    data = [
        "//:prysm_sh",
        "//cmd/beacon-chain",
        "//cmd/slasher",
        "//cmd/validator",
        "//tools/bootnode",
        "@com_github_ethereum_go_ethereum//cmd/geth",
    ],
    eth_network = "minimal",
    shard_count = 2,
    tags = [
        "e2e",
        "manual",
        "minimal",
        "requires-network",
    ],
    deps = [
        "//beacon-chain/blockchain/testing:go_default_library",
        "//beacon-chain/core/state:go_default_library",
        "//beacon-chain/db/testing:go_default_library",
        "//beacon-chain/operations/slashings:go_default_library",
        "//beacon-chain/slasher/simulator:go_default_library",
        "//beacon-chain/state/stategen:go_default_library",
        "//endtoend/components:go_default_library",
        "//endtoend/evaluators:go_default_library",
        "//endtoend/helpers:go_default_library",
        "//endtoend/params:go_default_library",
        "//endtoend/types:go_default_library",
        "//proto/eth/v1alpha1:go_default_library",
        "//shared/bls:go_default_library",
        "//shared/params:go_default_library",
        "//shared/slotutil:go_default_library",
        "//shared/testutil:go_default_library",
        "//shared/testutil/assert:go_default_library",
        "//shared/testutil/require:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_sirupsen_logrus//hooks/test:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
