load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_priority_class//:defaults.bzl", "k8s_priority_class")

k8s_objects(
    name = "everything",
    objects = [
        "//k8s/geth:everything",
        ":priority_class"
    ],
)

k8s_priority_class(
    name = "priority_class",
    template = "priority.yaml",
)