load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_priority_class//:defaults.bzl", "k8s_priority_class")

k8s_objects(
    name = "everything",
    objects = [
        ":priority_class",
        "//k8s/geth:everything",
        "//k8s/beacon-chain:everything",
    ],
    tags = ["manual"],
)

k8s_priority_class(
    name = "priority_class",
    template = "priority.yaml",
    namespace = "default",
)
