load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "endpoint.go",
        "external_ip.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v3/network",
    visibility = ["//visibility:public"],
    deps = [
        "//network/authorization:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "auth_test.go",
        "endpoint_test.go",
        "external_ip_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//encoding/bytesutil:go_default_library",
        "//network/authorization:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
    ],
)
