load("@prysm//tools/go:def.bzl", "go_library")
load(
    "@bazel_skylib//rules:common_settings.bzl",
    "string_flag",
)

# Example flag: --//proto:network=minimal
string_flag(
    name = "network",
    build_setting_default = "mainnet",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ssz_mainnet",
    flag_values = {
        "@prysm//proto:network": "mainnet",
    },
)

config_setting(
    name = "ssz_minimal",
    flag_values = {
        "@prysm//proto:network": "minimal",
    },
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/prysmaticlabs/prysm/proto",
    visibility = ["//visibility:public"],
)
