load(
    "@bazel_skylib//rules:common_settings.bzl",
    "string_flag",
)

# gazelle:resolve proto proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto go google/api/annotations.proto @googleapis//google/api:annotations_go_proto

# Example flag: --//proto:network=minimal
string_flag(
    name = "network",
    build_setting_default = "mainnet",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ssz_mainnet",
    flag_values = {
        "@prysm//proto:network": "mainnet",
    },
)

config_setting(
    name = "ssz_minimal",
    flag_values = {
        "@prysm//proto:network": "minimal",
    },
)
