load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service_registry.go"],
    importpath = "github.com/prysmaticlabs/prysm/runtime",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["service_registry_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//shared/testutil/assert:go_default_library",
        "//shared/testutil/require:go_default_library",
    ],
)
