load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service_registry.go"],
    importpath = "github.com/prysmaticlabs/prysm/v3/runtime",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["service_registry_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
    ],
)

genrule(
    name = "version_file",
    srcs = [],
    outs = ["version.txt"],
    cmd = "cat bazel-out/stable-status.txt | grep STABLE_GIT_TAG | cut -d' ' -f2 | tr -d v > $@",
    stamp = True,
    tags = ["local"],
    visibility = ["//visibility:public"],
)
