load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prysmaticlabs/geth-sharding/sharding",
    visibility = ["//sharding:__subpackages__"],
    deps = [
        "//sharding/node:go_default_library",
        "//sharding/utils:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)

go_binary(
    name = "sharding",
    embed = [":go_default_library"],
    visibility = ["//sharding:__subpackages__"],
)
