load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service_registry.go"],
    importpath = "github.com/prysmaticlabs/prysm/shared",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["service_registry_test.go"],
    embed = [":go_default_library"],
)
