load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["server_test.go"],
    deps = [
        "//proto/eth/v1alpha1:go_default_library",
        "//slasher/db:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)
