load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "usage.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/slasher",
    visibility = ["//slasher:__subpackages__"],
    deps = [
        "//shared/cmd:go_default_library",
        "//shared/debug:go_default_library",
        "//shared/logutil:go_default_library",
        "//shared/version:go_default_library",
        "//slasher/flags:go_default_library",
        "//slasher/node:go_default_library",
        "@com_github_joonix_log//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["usage_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_urfave_cli//:go_default_library"],
)

go_image(
    name = "image",
    srcs = [
        "main.go",
        "usage.go",
    ],
    base = "//tools:cc_image",
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/prysmaticlabs/prysm/slasher",
    race = "off",
    static = "off",
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        "//shared/cmd:go_default_library",
        "//shared/debug:go_default_library",
        "//shared/logutil:go_default_library",
        "//shared/version:go_default_library",
        "//slasher/flags:go_default_library",
        "//slasher/node:go_default_library",
        "//slasher/service:go_default_library",
        "@com_github_joonix_log//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

container_bundle(
    name = "image_bundle",
    images = {
        "gcr.io/prysmaticlabs/prysm/slasher:latest": ":image",
        "gcr.io/prysmaticlabs/prysm/slasher:{DOCKER_TAG}": ":image",
    },
    tags = ["manual"],
)

docker_push(
    name = "push_images",
    bundle = ":image_bundle",
    tags = ["manual"],
)

go_binary(
    name = "slasher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
